[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-nexus"
version = "0.1.0"
description = "One decorator. Two interfaces. Build FastAPI + MCP backends with a single source of truth."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "boopathiraj", email = "boopathiraj.aideveloper@gmail.com" }
]
keywords = [
  "fastapi", "mcp", "model-context-protocol", "llm", "ai", "agents",
  "rest", "api", "fastmcp", "unified", "backend"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: FastAPI",
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "fastmcp>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://rajboopathiking.github.io/UnifiedNexus"
Repository = "https://github.com/rajboopathiking/UnifiedNexus"
Documentation = "https://rajboopathiking.github.io/UnifiedNexus"
"Bug Tracker" = "https://github.com/rajboopathiking/UnifiedNexus/issues"
Changelog = "https://github.com/rajboopathiking/UnifiedNexus/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["unified_nexus"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
